cmake_minimum_required(VERSION 3.20)
project(Sorting_Algorithmss)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sorting_Algorithmss
        main.cpp
        AlgorithmSortK.h
        AlgorithmSortK.cpp
        AlgorithmSortHeap.h
        AlgorithmSortHeap.cpp
        SelectionAlgorithm.h
        SelectionAlgorithm.cpp
        BinaryHeap.h
        BinaryHeap.cpp
        TestBed.h
        TestBed.cpp
        AlgorithmSortAll.h
        AlgorithmSortAll.cpp
        AlgorithmSortQuick.cpp
        AlgorithmSortQuick.h)
